<resources>
    <string name="app_name">Auto Expense</string>
    <string name="price_per_liter">Price Per Liter</string>
    <string name="bottom_sheet_peek_default_values_description">Set default values</string>
    <string name="settings">Settings</string>

    <string name="sum">Sum</string>
    <string name="capacity">Capacity</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="select_expenses">Select expenses</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
