<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardViewShadowStart"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="@dimen/size_10" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCardViewShadowStart"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxHeader"
                android:visibility="gone"
                android:paddingRight="@dimen/size_5"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_list_recycler_view_list_item_horizontal_margin"
                android:paddingRight="@dimen/fragment_list_recycler_view_list_item_horizontal_margin"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/sum"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/adapter_header_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:text="@string/capacity"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/adapter_header_text_size"
                        android:textColor="@android:color/holo_blue_light" />
                </LinearLayout>



                <TextView
                    android:text="@string/distance"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textSize="@dimen/adapter_header_text_size"
                    android:textColor="@android:color/black" />

                <TextView
                    android:text="@string/price"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textSize="@dimen/adapter_header_text_size"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:text="@string/date"
                    android:layout_height="match_parent"
                    android:layout_width="@dimen/fragment_list_recycler_view_list_item_date_width"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textSize="@dimen/adapter_header_text_size"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

